--- a/package.json
+++ b/package.json
@@ -13,40 +13,42 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "latest",
-    "del": "latest",
-    "gulp": "latest",
-    "gulp-autoprefixer": "latest",
-    "gulp-clean-css": "latest",
-    "gulp-file-include": "latest",
-    "gulp-fonter": "latest",
-    "gulp-group-css-media-queries": "latest",
-    "gulp-if": "latest",
-    "gulp-imagemin": "latest",
-    "gulp-newer": "latest",
-    "gulp-notify": "latest",
-    "gulp-plumber": "latest",
+    "browser-sync": "^2.29.1",
+    "del": "^7.0.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-file-include": "^2.3.0",
+    "gulp-fonter": "^0.3.0",
+    "gulp-group-css-media-queries": "^1.2.2",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^8.0.0",
+    "gulp-newer": "^1.4.0",
+    "gulp-notify": "^4.0.0",
+    "gulp-plumber": "^1.2.1",
     "gulp-pug": "latest",
-    "gulp-rename": "latest",
-    "gulp-replace": "latest",
-    "gulp-sass": "latest",
-    "gulp-svg-sprite": "latest",
-    "gulp-ttf2woff2": "latest",
-    "gulp-util": "latest",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.4",
+    "gulp-sass": "^5.1.0",
+    "gulp-svg-sprite": "^2.0.3",
+    "gulp-ttf2woff2": "^4.0.1",
+    "gulp-util": "^3.0.8",
     "gulp-version-number": "^0.2.4",
-    "gulp-webp": "latest",
-    "gulp-webp-html-nosvg": "latest",
-    "gulp-webpcss": "latest",
-    "gulp-zip": "latest",
-    "sass": "latest",
-    "swiper": "latest",
+    "gulp-webp": "^4.0.1",
+    "gulp-webp-css": "^1.1.0", 
+    "gulp-webp-html-nosvg": "^1.1.1",
+    "gulp-webpcss": "^1.1.1",
+    "gulp-zip": "^5.1.0",
+    "sass": "^1.62.0",
+    "swiper": "^9.2.4",
     "vinyl-ftp": "^0.6.1",
     "webp-converter": "2.2.3",
-    "webpack": "latest",
-    "webpack-stream": "latest"
+    "webpack": "^5.80.0",
+    "webpack-stream": "^7.0.0"
   },
   "dependencies": {
-    "gulp-cli": "^2.3.0"
+    "gulp-cli": "^2.3.0",
+    "normalize.css": "^8.0.1"
   },
   "description": ""
 }
